[package]
name = "aggligator-transport-kcp"
version = "0.1.0"
description = "Aggligator transport: KCP"
categories = ["asynchronous", "network-programming"]
keywords = ["aggligator", "aggligator-transport", "kcp"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
fec = ["dep:reed-solomon-erasure"]
phantun = ["dep:tun2", "dep:pnet", "dep:internet-checksum", "dep:bytes", "dep:rand", "dep:flume"]

[dependencies]
aggligator = { version = "0.9.11", path = "../aggligator" }

async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync"] }

kcp-tokio = "0.4.0"
network-interface = "2"
reed-solomon-erasure = { version = "6.0", optional = true }
tun2 = { version = "4", features = ["async"], optional = true }
pnet = { version = "0.35", optional = true }
internet-checksum = { version = "0.2", optional = true }
bytes = { workspace = true, optional = true }
rand = { workspace = true, features = ["sys_rng"], optional = true }
flume = { version = "0.12", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
